Spring-Cloud-Stream 自定义消息通道

--- a/spring-cloud-stream-producer/src/main/resources/application.yml
+++ b/spring-cloud-stream-producer/src/main/resources/application.yml
@@ -18,5 +18,9 @@ spring:
           destination: shiayangaExchange
           content-type: text/plain
           binder: shiayangaBinder
+        outputLog:
+          destination: inputLog
+          content-type: text/plain
+          binder: shiayangaBinder
 server:
   port: 9090
